octave3.2 (3.2.0-1) UNRELEASED; urgency=low

  * New upstream release
  * debian/in/PACKAGE.postinst: Remove an old hack added in the code of
    the package database rebuild.  This was added for debugging purposes
    on some autobuilders and is not necessary anymore.

 -- Rafael Laboissiere <rafael@debian.org>  Fri, 05 Jun 2009 22:29:11 +0200

octave3.2 (3.2.0~rc5-1) experimental; urgency=low

  * New upstream release candidate

 -- Rafael Laboissiere <rafael@debian.org>  Tue, 02 Jun 2009 15:52:41 +0200

octave3.2 (3.2.0~rc4-2) experimental; urgency=low

  * debian/in/control: Make the octave3.2* packages Conflict/
    Replace/Provide the corresponding octave3.1* packages

 -- Rafael Laboissiere <rafael@debian.org>  Thu, 28 May 2009 20:18:08 +0200

octave3.2 (3.2.0~rc4-1) experimental; urgency=low

  * New upstream release candidate
  * debian/patches/termios-h-check-3.1.diff: Drop patch (applied upstream)

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 27 May 2009 10:56:36 +0200

octave3.2 (3.2.0~rc3-1) experimental; urgency=low

  * New upstream release candidate.
  * debian/rules:
    + (configure-stamp) Instead of calling autogen.sh, call explicitly
      autoconf and autoheader, otherwise these autotools will be run inside
      one of the directories under .pc, which contain a copy of configure.in
      after "quilt push" is run.
    + Set a value for the priority variable when version of Octave is 3.2
  * debian/in/control: Include the Breaks field only for octave3.0

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 25 May 2009 10:43:29 +0200

octave3.0 (1:3.0.5-6) unstable; urgency=low

  * debian/patches/no-argout-intersect.diff: Fix paths of the patch,
    such that it succeeds when applied (closes: #530369)
  * debian/patches/datenum-vector-input-any-orientation.diff: New patch
    for making datenum accept vector inputs in any orientation.  This is
    necessary for making the tests in the octave-time package succeed.